--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "index.js",
   "author": "Pawel Staszczuk",
   "license": "ISC",
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/staszczuk/stopwatch.git"
+  },
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-copy": "^4.0.1",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-csso": "^4.0.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-uglify": "^3.0.2"
+      "gulp": "^4.0.2",
+      "browser-sync": "^2.26.7",
+      "gulp-sass": "^4.1.0",
+      "gulp-postcss": "^8.0.0",
+      "gulp-autoprefixer": "^7.0.1",
+      "gulp-cssnano": "^2.1.3",
+      "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "typescript": "^3.9.5"
+      "gulp-htmlmin": "^5.0.1",
+      "gulp-typescript": "^6.0.0-alpha.1",
+      "typescript": "^3.9.5"
   }
 }
